[package]
name = "readme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
tinytemplate = "1.2.1"
toml = "0.5.9"
